--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
       I am a student at Tullinge Gymnasium, this is my personal portfolio
       website.
     </h3>
-    <a class="porto" href="#portfolio">Portfolio</a>
+    <div class="topnav" id="mytopnav">
+      <a class="active" href="#home">Home</a>
+      <a class="porto" href="#portfolio">Portfolio</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+
     <div class="instagram">
       <a href="https://www.instagram.com/serbensson/">
         <img class="instagrampic" src="/pics/instagram.png" alt="instagram" />
